--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -31,6 +31,10 @@
   animation: scaleAnimation 1s ease infinite;
 }
 
+.card__badge-hidden {
+  display: none;
+}
+
 @keyframes scaleAnimation {
   to {
     transform: translate(20px, -20px) scale(1.05);
@@ -39,36 +43,36 @@
 }
 
 .image__container img {
-	width: 100%;
-	object-fit: cover;
+  width: 100%;
+  object-fit: cover;
 }
 
 .card__body {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .card__title {
-	font-weight: 400;
+  font-weight: 400;
 }
 
 .card__price {
-	font-size: 24px;
-	font-weight: bold;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .hr {
-    width: 100%;
-	height: 1px;
-	margin-bottom: 10px;
-	background: rgba(128, 128, 128, 0.656);
-    border: none;
+  width: 100%;
+  height: 1px;
+  margin-bottom: 10px;
+  background: rgba(128, 128, 128, 0.656);
+  border: none;
 }
 
 .btn__container {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	gap: 12px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 12px;
 }
