--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -40,20 +40,20 @@
 }
 
 .btn.checkout {
-	width: 150px;
-	background-color: #47bb77c6;
-	color: #fff;
-	font-size: 16px;
+  width: 150px;
+  background-color: #47bb77c6;
+  color: #fff;
+  font-size: 16px;
 }
 
 .btn.checkout:hover {
-	background-color: #47bb78;
+  background-color: #47bb78;
 }
 
 .btn.checkout:active {
-	background-color: rgb(30, 93, 41);
+  background-color: rgb(30, 93, 41);
 }
 
 .btn.disabled {
-	opacity: 0.5;
+  display: none;
 }
